# 1D-Conduction-problem4.1

./: main.cpp  plotter.py
example-4.1/: CMakeLists.txt  README.md  build.ninja  main.cpp  plotter.py
example-4.2/: README.md  main.cpp  plotter.py
